fix: prevent that the pip overlap the right bar

--- a/webapp/src/App.scss
+++ b/webapp/src/App.scss
@@ -4,4 +4,6 @@
   background-color: var(--sidebar-bg);
   justify-content: center;
   align-items: center;
+  // Prevent that any item is displayed outside the app
+  overflow: hidden;
 }
